--- a/todoapi/src/main/resources/application.properties
+++ b/todoapi/src/main/resources/application.properties
@@ -9,14 +9,22 @@
 # # spring.datasource.url=jdbc:mysql://localhost:3306/empspring
 # # spring.datasource.username=root
 # # spring.datasource.password=ruddarmsql
-
+# In application.properties
+server.port=${PORT:8080}
 spring.application.name=springweb1st
-spring.datasource.url=jdbc:mysql://localhost:3306/todoapp
-spring.datasource.username=root
-spring.datasource.password=ruddarmsql
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com/sql12741499
+# jdbc:mysql://[YOUR_DATABASE_HOST]/[YOUR_DATABASE_NAME]
+spring.datasource.username=sql12741499
+spring.datasource.password=1EldzJrPNj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update  
 # Options: none, update, create, create-drop
+
+# old
+# spring.datasource.url=jdbc:mysql://localhost:3306/todoapp
+# jdbc:mysql://[YOUR_DATABASE_HOST]/[YOUR_DATABASE_NAME]
+# spring.datasource.username=root
+# spring.datasource.password=ruddarmsql
